# tg_proxy

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  NOTES.md  PLAN.md  README.md  alembic.ini  config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
docks/: SUMMARY.md
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: authorize.py  check_credentials.py
src/: main.py  orchestrator.py  worker.py
src/core/: config.py  exceptions.py  flood.py  logging.py
src/db/: pool.py  repository.py
src/handlers/: albums.py  deletions.py  edits.py  messages.py  reactions.py
