[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-proxy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "telethon==1.36.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "types-PyYAML",
    "types-pytz",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "double"
